--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ button {
     width: 60vw;
     height: 10vh;
     border-radius: 5%;
-    margin: 2%;
+    margin-bottom: 5%;
     color: white;
     font-size: 5vw;
     border: solid 0.5px white;
@@ -62,18 +62,18 @@ button {
 }
 
 h1 {
-    font-size: 10vw;
+    font-size: 13vw;
 }
 
 #name {
     background: -webkit-linear-gradient(rgb(226, 77, 77), rgb(150, 0, 0));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-   font-size: 10vw;
+   font-size: 13vw;
 }
 
 h2 {
-    font-size: 6vw;
+    font-size: 9vw;
 }
 
 section {
