--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ button {
 }
 
 h1 {
-    font-size: 13vw;
+    font-size: 20vw;
 }
 
 #name {
@@ -89,4 +89,18 @@ section {
     margin: auto;
     padding: 10rem;
     text-align: center;
+}
+
+@media (min-width: 768px) {
+    h1 {
+        font-size: 10vw;
+    }
+
+    #name {
+        font-size: 10vw;
+    }
+
+    h2 {
+        font-size: 5vw; 
+    }
 }
