--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ header {
     flex-direction: column;
     justify-content: center;
     margin: auto;
-    padding: 10rem;
+    padding: 2rem;
     text-align: center;
 }
 
@@ -32,7 +32,7 @@ button {
     border-radius: 5%;
     margin-bottom: 5%;
     color: white;
-    font-size: 5vw;
+    font-size: 7vw;
     border: solid 0.5px white;
     background: transparent;
     animation-name: button;
@@ -62,7 +62,7 @@ button {
 }
 
 h1 {
-    font-size: 20vw;
+    font-size: 13vw;
 }
 
 #name {
@@ -74,6 +74,13 @@ h1 {
 
 h2 {
     font-size: 9vw;
+}
+
+@media (min-width: 800px) {
+    h1 {font-size: 10vw;}
+    h2 {font-size: 5vw;}
+    #name {font-size: 10vw;}
+    button {font-size: 7vh;}
 }
 
 section {
@@ -89,18 +96,4 @@ section {
     margin: auto;
     padding: 10rem;
     text-align: center;
-}
-
-@media (min-width: 768px) {
-    h1 {
-        font-size: 10vw;
-    }
-
-    #name {
-        font-size: 10vw;
-    }
-
-    h2 {
-        font-size: 5vw; 
-    }
 }
