--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-size: 15px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 header {
@@ -32,7 +32,7 @@ button {
     border-radius: 5%;
     margin-bottom: 5%;
     color: white;
-    font-size: 5vw;
+    font-size: 6vw;
     border: solid 0.5px white;
     background: transparent;
     animation-name: button;
@@ -43,17 +43,17 @@ button {
 
 @keyframes button {
 0% {
-    box-shadow: 1px 1px 1px 6px rgb(15, 2, 2);
+    box-shadow: 1px 1px 1px 8px rgb(15, 2, 2);
     border: none;
 }
 
 25% {
-    box-shadow: 1px 1px 1px 6px rgb(151, 28, 28);
+    box-shadow: 1px 1px 1px 5px rgb(151, 28, 28);
     border: none;
 }
 
 50% {
-    box-shadow: 1px 1px 1px 6px rgb(104, 10, 10);
+    box-shadow: 1px 1px 1px 5px rgb(104, 10, 10);
     border: none;
 }
 100% {
@@ -77,6 +77,7 @@ h2 {
 }
 
 @media (min-width: 1080px) {
+    .header {width: 80%;}
     h1 {font-size: 10vw;}
     h2 {font-size: 5vw;}
     #name {font-size: 10vw;}
@@ -97,3 +98,4 @@ section {
     padding: 10rem;
     text-align: center;
 }
+
